[gd_scene load_steps=28 format=3 uid="uid://c7p4hl7huywo5"]

[ext_resource type="Script" path="res://scene/2/statistic.gd" id="1_k2xny"]
[ext_resource type="Script" path="res://resource/statisticResource.gd" id="2_gnn42"]
[ext_resource type="Script" path="res://resource/coreResource.gd" id="2_varyk"]
[ext_resource type="PackedScene" uid="uid://i14mnupyvsff" path="res://scene/0/doublet.tscn" id="3_h0ij4"]
[ext_resource type="Script" path="res://resource/levelResource.gd" id="3_is0j2"]
[ext_resource type="Script" path="res://resource/doublet/doubletResource.gd" id="4_bywro"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyumh"]

[sub_resource type="Resource" id="Resource_stloc"]
script = ExtResource("2_varyk")
aspect = "dexterity"
level = null
current = 9
limit = 16
is_barriered = true

[sub_resource type="Resource" id="Resource_8g42d"]
script = ExtResource("2_varyk")
aspect = "intellect"
level = null
current = 9
limit = 16
is_barriered = true

[sub_resource type="Resource" id="Resource_nh1of"]
script = ExtResource("2_varyk")
aspect = "strength"
level = null
current = 9
limit = 16
is_barriered = true

[sub_resource type="Resource" id="Resource_kiicj"]
script = ExtResource("2_varyk")
aspect = "will"
level = null
current = 9
limit = 16
is_barriered = true

[sub_resource type="Resource" id="Resource_nimi4"]
script = ExtResource("3_is0j2")
value = 0
strength = SubResource("Resource_nh1of")
dexterity = SubResource("Resource_stloc")
intellect = SubResource("Resource_8g42d")
will = SubResource("Resource_kiicj")

[sub_resource type="Resource" id="Resource_ooi4q"]
script = ExtResource("2_gnn42")
damage_multiplier = 0
damage_modifier = 0
evasion_chance = 15
accuracy_chance = 85
critical_multiplier = 150
critical_chance = 15
armor_multiplier = 0
armor_modifier = 0
health_limit = 200
stamina_limit = 100
strength_multiplier = 100
dexterity_multiplier = 100
intellect_multiplier = 100
will_multiplier = 100
strength_modifier = 0
dexterity_modifier = 0
intellect_modifier = 0
will_modifier = 0
damage_multiplier_resources = Array[ExtResource("4_bywro")]([])
damage_modifier_resources = Array[ExtResource("4_bywro")]([])
evasion_chance_resources = Array[ExtResource("4_bywro")]([])
accuracy_chance_resources = Array[ExtResource("4_bywro")]([])
critical_multiplier_resources = Array[ExtResource("4_bywro")]([])
critical_chance_resources = Array[ExtResource("4_bywro")]([])
armor_multiplier_resources = Array[ExtResource("4_bywro")]([])
armor_modifier_resources = Array[ExtResource("4_bywro")]([])
health_limit_resources = Array[ExtResource("4_bywro")]([])
stamina_limit_resources = Array[ExtResource("4_bywro")]([])
strength_multiplier_resources = Array[ExtResource("4_bywro")]([])
dexterity_multiplier_resources = Array[ExtResource("4_bywro")]([])
intellect_multiplier_resources = Array[ExtResource("4_bywro")]([])
will_multiplier_resources = Array[ExtResource("4_bywro")]([])
strength_modifier_resources = Array[ExtResource("4_bywro")]([])
dexterity_modifier_resources = Array[ExtResource("4_bywro")]([])
intellect_modifier_resources = Array[ExtResource("4_bywro")]([])
will_modifier_resources = Array[ExtResource("4_bywro")]([])

[sub_resource type="Resource" id="Resource_fx6sg"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "modifier"
type = "parameter"
subtype = "damage"
value = 0

[sub_resource type="Resource" id="Resource_36cmr"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "multiplier"
type = "parameter"
subtype = "damage"
value = 0

[sub_resource type="Resource" id="Resource_rbgcj"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "chance"
type = "parameter"
subtype = "evasion"
value = 15

[sub_resource type="Resource" id="Resource_diptl"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "chance"
type = "parameter"
subtype = "accuracy"
value = 15

[sub_resource type="Resource" id="Resource_ppadl"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "chance"
type = "parameter"
subtype = "critical"
value = 15

[sub_resource type="Resource" id="Resource_7wyuq"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "multiplier"
type = "parameter"
subtype = "critical"
value = 150

[sub_resource type="Resource" id="Resource_ntpgp"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "modifier"
type = "parameter"
subtype = "armor"
value = 0

[sub_resource type="Resource" id="Resource_gip30"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "multiplier"
type = "parameter"
subtype = "armor"
value = 0

[sub_resource type="Resource" id="Resource_hnofm"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "limit"
type = "parameter"
subtype = "health"
value = 100

[sub_resource type="Resource" id="Resource_58u2c"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "limit"
type = "parameter"
subtype = "stamina"
value = 100

[sub_resource type="Resource" id="Resource_ic76n"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "limit"
type = "aspect"
subtype = "strength"
value = 9

[sub_resource type="Resource" id="Resource_cdpeb"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "limit"
type = "aspect"
subtype = "dexterity"
value = 9

[sub_resource type="Resource" id="Resource_ktaun"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "limit"
type = "aspect"
subtype = "intellect"
value = 9

[sub_resource type="Resource" id="Resource_etlut"]
script = ExtResource("4_bywro")
time = "permanent"
measure = "limit"
type = "aspect"
subtype = "will"
value = 9

[node name="Statistic" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qyumh")
script = ExtResource("1_k2xny")
level = SubResource("Resource_nimi4")
resource = SubResource("Resource_ooi4q")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="Parameters" type="GridContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="DamageModifier" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_fx6sg")

[node name="DamageMultiplier" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_36cmr")

[node name="EvasionChance" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_rbgcj")

[node name="AccuracyChance" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_diptl")

[node name="CriticalChance" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_ppadl")

[node name="CriticalMultiplier" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_7wyuq")

[node name="ArmorModifier" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_ntpgp")

[node name="ArmorMultiplier" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_gip30")

[node name="HealthLimit" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_hnofm")

[node name="StaminaLimit" parent="VBox/Parameters" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_58u2c")

[node name="Aspects" type="GridContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="Strength" parent="VBox/Aspects" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_ic76n")

[node name="Dexterity" parent="VBox/Aspects" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_cdpeb")

[node name="Intellect" parent="VBox/Aspects" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_ktaun")

[node name="Will" parent="VBox/Aspects" node_paths=PackedStringArray("panel") instance=ExtResource("3_h0ij4")]
unique_name_in_owner = true
layout_mode = 2
panel = NodePath("../../..")
resource = SubResource("Resource_etlut")
